asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_annotation_type.asteriacore
x : forall {f : Type -> Type}. forall {f : Type -> Type}. a -> a
  = \{f} -> \{a} -> \y -> y : f
  ;;
